BUG#46183 Cluster query performance regression on Solaris  - make it possible to control which processes use monotonic timers    by adding a global variable read by 'ndb_init' that forces it    to initialize timers and conditions with monotonic timers    if that is available  - always set the global variable except on Solaris since it's    better to use monotonic if possible  - always set teh global variable in ndbd since it relies on the clock    to be monotonic in it's scheduler loop