storage/ndb/src/common/portlib/NdbCondition.c
@@ -30,11 +30,15 @@ struct NdbCondition
 };
 
 #ifdef HAVE_CLOCK_GETTIME
+#ifdef CLOCK_MONOTONIC
+static int clock_id = CLOCK_MONOTONIC;
+#else
 static int clock_id = CLOCK_REALTIME;
+#endif
 #endif
 
 void
-NdbCondition_Init()
+NdbCondition_Init(int need_monotonic)
 {
 #if defined HAVE_CLOCK_GETTIME && defined HAVE_PTHREAD_CONDATTR_SETCLOCK && \
     defined CLOCK_MONOTONIC
@@ -42,6 +46,10 @@ NdbCondition_Init()
   int res, init = 0;
   pthread_cond_t tmp;
   pthread_condattr_t attr;
+
+  if (!need_monotonic)
+    return;
+
   if ((res = pthread_condattr_init(&attr)) != 0)
     goto nogo;
 
